# morg

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  docs.yml  release.yml
crates/morg-mode/: Cargo.toml
crates/morg-mode/src/: cli.rs  collect.rs  config.rs  main.rs  report.rs  util.rs
crates/morg-mode/src/commands/: agenda.rs  archive.rs  capture.rs  columns.rs  diary.rs  export.rs  frontmatter.rs  ical.rs  id.rs  lint.rs  mod.rs  refile.rs  refs.rs  search.rs  tangle.rs  time.rs  todos.rs  watch.rs
crates/morg-parser/: Cargo.toml
crates/morg-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  tags.rs  tokens.rs
docs/: book.toml
docs/src/: SUMMARY.md  feature-comparison.md  introduction.md  syntax.md
docs/src/roadmap/: README.md  archiving.md  capture.md  closed-timestamps.md  column-view.md  comments.md  custom-todo-sequences.md  description-lists.md  effort-estimates.md  file-tags.md  footnotes.md  horizontal-rules.md  inline-markup.md  links.md  lists.md  noweb.md  ongoing.md  parser-refactor.md  priorities.md  property-drawers.md  recurring-timestamps.md  refiling.md  scheduled.md  statistics-cookies.md  tag-inheritance.md  time-of-day.md  timestamp-ranges.md  warning-periods.md
morg-mode-nvim/: .busted  Makefile  README.md
morg-mode-nvim/lua/morg/commands/: archive.lua  search.lua
morg-mode-nvim/lua/morg/snippets/: init.lua
morg-mode-nvim/lua/telescope/_extensions/: morg.lua
