[package]
name = "morg-mode"
edition.workspace = true
version.workspace = true

[[bin]]
name = "morg"
path = "src/main.rs"

[dependencies]
morg-parser = { path = "../morg-parser" }
clap.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
icalendar = "0.16"
serde_json = "1"
serde = { workspace = true }
notify = { version = "8", features = ["macos_kqueue"] }
toml = "0.8"
dirs = "6"
